--- a/.config
+++ b/.config
@@ -884,3 +884,4 @@ CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_shellsync=y
 CONFIG_STRACE_NONE=y
 CONFIG_PACKAGE_ubi-utils=y
+CONFIG_DEVEL=y\nCONFIG_CCACHE=y
