--- a/.config
+++ b/.config
@@ -884,4 +884,5 @@ CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_shellsync=y
 CONFIG_STRACE_NONE=y
 CONFIG_PACKAGE_ubi-utils=y
-CONFIG_DEVEL=y\nCONFIG_CCACHE=y
+CONFIG_DEVEL=y
+CONFIG_CCACHE=y
