Update configuration and scripts for m28c device
- Added new configuration file for m28c device.
- Updated HC5962.sh to modify default theme and enable ccache.
- Adjusted GitHub Actions workflow to build for m28c instead of x86.
- Updated feeds configuration to include additional sources and modify existing ones.

--- a/.github/workflows/x86.yml
+++ b/.github/workflows/x86.yml
@@ -1,3 +1,4 @@
+# /home/gll/OpenWRT/.github/workflows/x86.yml
 #
 # Copyright (c) 2019-2020 P3TERX <https://p3terx.com>
 #
@@ -8,7 +9,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build x86
+name: Build m28c
 
 on:
   schedule:
@@ -25,9 +26,9 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: x86.config
+  CONFIG_FILE: n28c.config
   DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: x86.sh
+  DIY_P2_SH: m28c.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -83,7 +84,7 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-  
+    
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
@@ -172,7 +173,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: ${{ steps.tag.outputs.release_date }} x86_x64软路由-精简版
+        name: m28c
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
