Refactor m28c workflow to streamline caching and build process
- Removed CCACHE_DIR environment variable and related steps for ccache preparation.
- Introduced a new step to record the upstream commit hash for better tracking.
- Updated caching strategy to focus on toolchain and build directories, enhancing build efficiency.

--- a/.github/workflows/m28c.yml
+++ b/.github/workflows/m28c.yml
@@ -30,7 +30,6 @@ env:
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: m28c.sh
   MAKE_THREADS: 3
-  CCACHE_DIR: ${{ github.workspace }}/.ccache
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -80,39 +79,18 @@ jobs:
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
-    - name: Prepare ccache directory
+    - name: Record upstream commit hash
       run: |
-        mkdir -p "$CCACHE_DIR"
-        echo "CCACHE_DIR=$CCACHE_DIR"
-        which ccache && ccache -M 2G || true
+        echo "LEDE_HEAD=$(git -C openwrt rev-parse HEAD)" >> $GITHUB_ENV
 
-    - name: Restore ccache
-      uses: actions/cache@v3
+    - name: Cache OpenWrt build (toolchain + build only)
+      uses: stupidloud/cachewrtbuild@main
       with:
-        path: .ccache
-        key: ccache-${{ runner.os }}-${{ env.REPO_BRANCH }}-${{ hashFiles('m28c.sh', 'n28c.config') }}
-        restore-keys: |
-          ccache-${{ runner.os }}-${{ env.REPO_BRANCH }}-
-
-    - name: Restore dl cache
-      uses: actions/cache@v3
-      with:
-        path: openwrt/dl
-        key: dl-${{ runner.os }}-${{ env.REPO_BRANCH }}-${{ hashFiles('feeds.conf.default') }}
-        restore-keys: |
-          dl-${{ runner.os }}-${{ env.REPO_BRANCH }}-
-
-    - name: Restore toolchain cache
-      uses: actions/cache@v3
-      with:
-        path: |
-          openwrt/staging_dir/host
-          openwrt/staging_dir/toolchain-*
-          openwrt/build_dir/host
-          openwrt/build_dir/toolchain-*
-        key: toolchain-${{ runner.os }}-${{ env.REPO_BRANCH }}-${{ hashFiles('n28c.config') }}
-        restore-keys: |
-          toolchain-${{ runner.os }}-${{ env.REPO_BRANCH }}-
+        ccache: 'false'
+        toolchain: 'true'
+        skip: 'true'
+        prefix: 'openwrt'
+        mixkey: 'm28c-rockchip'
 
     - name: Load custom feeds
       run: |
@@ -161,7 +139,6 @@ jobs:
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-        which ccache && ccache -s || true
 
     - name: Check space usage
       if: (!cancelled())
